# HTB-Discord

./: .env  .gitignore  Makefile  README.md  config.sample.yaml  htb-discord  htb-discord.service  htb_challenges.py  htb_machines.py  htb_notice.py  htb_osint.py  install.sh  linkwarden_forward.py  pyproject.toml
src/htb_discord/: __init__.py  __main__.py  cli.py  config.py  service.py
src/htb_discord/http/: __init__.py  ics_feed.py
src/htb_discord/modules/: __init__.py  challenges.py  linkwarden.py  machines.py  notices.py  osint.py
src/htb_discord/utils/: __init__.py  database.py  discord_helpers.py
